일부 URL http -> https 변경 적용

--- a/src/main/resources/templates/eventDetail.html
+++ b/src/main/resources/templates/eventDetail.html
@@ -29,7 +29,7 @@
     <script type="text/javascript" src="../assets/lib/bootstrap-switch/bootstrap-switch.min.js"></script>
 
     <!-- bar-rating -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
     <link rel="stylesheet" href="../assets/lib/bar-rating/fontawesome-stars.css" />
     <script type="text/javascript" src="../assets/lib/bar-rating/jquery.barrating.min.js"></script>
 
@@ -125,7 +125,7 @@ $(document).ready(function(){
     	var cookieUserId = getCookie("seoulEventUserId");
 	</script>
 	
-<script xmlns:v-on="http://www.w3.org/1999/xhtml">
+<script xmlns:v-on="https://www.w3.org/1999/xhtml">
 $(document).ready(function(){	
 	var todayDate = getToday();
 	
