--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -29,7 +29,7 @@
     <script type="text/javascript" src="./assets/lib/bootstrap-switch/bootstrap-switch.min.js"></script>
 
     <!-- bar-rating -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
     <link rel="stylesheet" href="./assets/lib/bar-rating/fontawesome-stars.css" />
     <script type="text/javascript" src="./assets/lib/bar-rating/jquery.barrating.min.js"></script>
 
@@ -147,7 +147,7 @@ $(document).ready(function(){
 	
 </script>            
 <!-- 검색결과 -->
-<script xmlns:v-on="http://www.w3.org/1999/xhtml">
+<script xmlns:v-on="https://www.w3.org/1999/xhtml">
 $(document).ready(function(){		
 	
     $( window ).scroll( function() {
